[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Menu/ChooseLevel/LevelPreview.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu/bonus.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu/play.png" type="Texture" id=4]

[node name="LevelPreview" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -500.0
margin_bottom = -1000.0
rect_min_size = Vector2( 125, 250 )
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviewTexture" type="NinePatchRect" parent="."]
margin_right = 125.0
margin_bottom = 250.0
texture = ExtResource( 4 )

[node name="PreviewArea" type="VBoxContainer" parent="."]
margin_right = 125.0
margin_bottom = 250.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="HBoxContainer" parent="PreviewArea"]
margin_top = 220.0
margin_right = 125.0
margin_bottom = 250.0

[node name="LevelLabel" type="Label" parent="PreviewArea/Bottom"]
margin_right = 91.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
valign = 2

[node name="BonusTexture" type="TextureRect" parent="PreviewArea/Bottom"]
margin_left = 95.0
margin_right = 125.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
